@startuml

' NEM SZEREPELNEK BENNE A LESZÁRMAZOTTAK HOGY ÁTLÁTHATÓBB LEGYEN '
' --> : használja, de nem tartalmazza '
' ===== Alap játékosok és szereplők =====
class Player {
    - name: String
    - score: int
    - actionsPerTurn: int
    - remainingActions: int
    + selectTecton(tecton: Tecton): Tecton
    + calculateScore(): int
}

class Entomologist {
    - insects: List<Insect>
    + increaseActions()
    + decreaseActions()
    + getRemainingActions(): int
}

class Mycologist {
    - mushrooms: List<Fungus>
    + placeFungus(t: Tecton)
}

' ===== Térképelemek és logika =====
abstract class Tecton {
    - breakChance: double
    - breakCount: int
    - hexagons: List<Hexagon>
    - neighbours: List<Tecton>
    - fungus: Fungus
    - insects: List<Insect>
    - spores: List<Spores>
    - hyphas: List<Mychologist>
    + addSpores(Mycologist)
    + removeSpores(Mycologist)
    + addHypha(Hypha)
    + split(double): List<Tecton>
    + isNeighbor(Tecton): boolean
    + hasHypha(Tecton): boolean
    + hasSpores(Mycologist): boolean
    + setFungus(Fungus)
    # handleHypha(Hypha)
    + hyphaDecay(): void
    + eatInsect(): boolean
}

class Hexagon {
    - id: int
    - neighbours: List<Hexagon>
    + getId(): int
    + getNeighbours(): List<Hexagon>
    + setNeighbours(List<Hexagon>)
    + destroy()
}

class Hypha {
    - tectons: List<Tecton>
    - species: Mycologist
    - fungus: Fungus
    - lifespan: int 
    + getSpecies(): Mycologist
    + continueHypha(Tecton t)
    + getTectons(): List<Tecton>
}

class Fungus {
    - species: Mycologist
    - tecton: Tecton
    - charge: int
    - lifespan: int
    - hyphas: List<Hypha>
    - spores: List<Spore>
    + spreadSpores()
    + growHypha(List<Tecton>): boolean
}

' ===== Spórák és hatásaik =====
abstract class Spore {
    - species: Mycologist
    - effectDuration: int
    - nutrientValue: int
    + getEffectDuration(): int
    + getNutrientValue(): int
    + decreaseEffectDuration()
    + applyTo(Insect)
}

' ===== Insect logika =====
class Insect {
    - entomologist: Entomologist
    - currentTecton: Tecton
    - effects: List<Spore>
    + move(Tecton): boolean
    + cutHypha(Hypha, Tecton): boolean
    + consumeSpores(Entomologist): boolean
    + addEffects(Spore)
    + removeExpiredEffects()
    + getEffects(): List<Spore>
    + getEntomologist(): Entomologist
}

' ===== Game engine =====
class GameBoard {
    - tectons: List<Tecton>
    + generateBoard()
    + getNeighbors(Tecton): List<Tecton>
    + breakHandler()
}

class Game {
    - map: GameBoard
    - players: List<Player>
    - currTurn: int
    - totalTurns: int
    - currentPlayer: Player
    - decayedHypha: List<Hypha>
    + initBoard()
    + initGame(): boolean
    + startGame()
    + addPlayer(Player): boolean
    + removePlayer(Player): boolean
    + nextTurn()
    + endGame()
}

' ===== Kapcsolatok =====
Game o-r- GameBoard
Game o-l- Player
GameBoard o-- Tecton
Tecton o-l- Hexagon
Tecton o-- Hypha
Tecton o-- Insect
Tecton o-r- Fungus
Tecton o-- Mycologist
Insect o-- Spore
Insect --> Entomologist
Mycologist o-- Fungus
Fungus o-- Hypha
Fungus o-- Spore
Spore --> Insect
Spore --> Mycologist
Hypha o-- Tecton
Hypha --> Mycologist


@enduml
